Fix word-wrap break word

--- a/src/sass/components/composer/progressUpload.scss
+++ b/src/sass/components/composer/progressUpload.scss
@@ -18,7 +18,6 @@
 
 .progressLoader-name {
     padding: 0 0 0 10px;
-    word-wrap: break-word;
     text-overflow: ellipsis;
     overflow: hidden;
     line-height: 16px;
